--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <tr>
             <td>
              <!-- html forms for CURD operations -->
-             <form >
+             <form onsubmit="event.preventDefault();" autocomplete="off" >
                 <div>
                     <label >Full Name*</label><label class="validation-error hide" id="fullNameValidationError">This field is required</label>
                     <input type="text" name="fullName" id="fullName">
